# check

./: CMakeLists.txt
include/: allocator.h  array.h  array.ipp  eight.h  figure.h  five.h  octagon.h  point.h  six.h  square.h  triangle.h  vector_figure.h  vector_points.h  vectorfigure.h  vectorpoints.h
ooplr4/: CMakeLists.txt
ooplr4/include/: figure.h  point.h
src/: allocator.cpp  figure.cpp  main.cpp  octagon.cpp  point.cpp  square.cpp  triangle.cpp  vecto_figure.cpp  vector_points.cpp  vectorfigure.cpp  vectorpoints.cpp
test/: test_figures.cpp  test_point.cpp  test_vectors.cpp
